--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "linneszyx",
+  "license": "MIT",
+  "engines": {
+    "node": "18.14.2"
+  },
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
