--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-  },
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "build": "node app.js"
+    
+ },
   "keywords": [],
   "author": "linneszyx",
   "license": "MIT",
