--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "build": "npm run build"
-    
- },
+    "dev": "nodemon app.js"
+  },
   "keywords": [],
   "author": "linneszyx",
   "license": "MIT",
@@ -21,6 +19,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "yarn": "^1.22.19"
   }
 }
